--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Wire+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap');
+
 .App {
   text-align: center;
-  border: 1px solid black;
   height: 100vh;
   overflow: hidden;
   margin: 0;
@@ -158,4 +160,64 @@
 
 span {
   font-size: 50px;
+  font-family: 'Wire One';
+  font-weight: 900;
 }
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+
+
+.hero {
+  border: 1px solid black;
+  background-image: url(https://images.unsplash.com/photo-1622296367225-9af4f117c6a7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  margin-bottom: 20px;
+  z-index: -2;
+}
+
+.hero-container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.name {
+  font-family: 'Vast Shadow';
+  color: #904860;
+  font-size: 55px;
+}
+
+.descriptions {
+  font-family: 'Vast Shadow';
+  color: #904860;
+  font-size: 30px;
+}
+
+.content {
+  background-color: #904860;
+}
+
+.content-header {
+  font-family: 'Wire One';
+  font-size: 30px;
+  font-weight: 900;
+}
+
+.personal-story {
+  font-size: 20px;
+}
+
+
+
