--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -219,5 +219,101 @@ nav {
   font-size: 20px;
 }
 
+.carousel {
+  height: 600px;
+  border: 1px solid black;
+  margin: 0;
+  display: grid;
+  grid-template-rows: 500px 100px;
+  grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
+  align-items: center;
+  justify-content: center;
+}
 
+main#carousel {
+  grid-row: 1 / 2;
+  grid-column: 1 / 8;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transform-style: preserve-3d;
+  perspective: 600px;
+  --contact-info: 4;
+  --middle: 3;
+  --position: 1;
+  pointer-events: none;
+  animation: fadeIn 5s;
+  -webkit-animation: fadeIn 5s;
+  -o-animation: fadeIn 5s;
+}
 
+div.contact-info {
+  position: absolute;
+  width: 300px;
+  height: 400px;
+  background-color: coral;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px 5px;
+  --r: calc(var(--position) - var(--offset));
+  --abs: max(calc(var(--r) * -1), var(--r));
+  transition: all 0.25s linear;
+  transform: rotateY(calc(-10deg * var(--r)))
+    translateX(calc(-300px * var(--r)));
+  z-index: calc((var(--position) - var(--abs)));
+}
+
+div.contact-info:nth-of-type(1) {
+  --offset: 1;
+  background-color: coral;
+}
+
+div.contact-info:nth-of-type(2) {
+  --offset: 2;
+  background-color: coral;
+}
+
+div.contact-info:nth-of-type(3) {
+  --offset: 3;
+  background-color: coral;
+}
+
+div.contact-info:nth-of-type(4) {
+  --offset: 4;
+  background-color: coral;
+}
+
+input:nth-of-type(1) {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+input:nth-of-type(1):checked ~ main#carousel {
+  --position: 1;
+}
+
+input:nth-of-type(2) {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(2):checked ~ main#carousel {
+  --position: 2;
+}
+
+input:nth-of-type(3) {
+  grid-column: 4 /5;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(3):checked ~ main#carousel {
+  --position: 3;
+}
+
+input:nth-of-type(4) {
+  grid-column: 5 / 6;
+  grid-row: 2 / 3;
+}
+input:nth-of-type(4):checked ~ main#carousel {
+  --position: 4;
+}
