--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -4,8 +4,7 @@
 .App {
   text-align: center;
   height: 100vh;
-  overflow: hidden;
-  margin: 0;
+  
 }
 
 .container {
@@ -173,6 +172,7 @@ nav {
 .portfolio-container {
   height: 100%;
   background-image: url(https://images.unsplash.com/photo-1518893494013-481c1d8ed3fd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80);
+  background-size: cover;
 }
 
 
@@ -260,9 +260,9 @@ nav {
 }
 
 .project-card {
-  width: 500px;
-  height: 500px;
-  box-shadow: 5px 5px 5px 5px;
+  width: 600px;
+  height: 600px;
+  border-radius: 25px;
 }
 
 .project-container {
@@ -273,8 +273,8 @@ nav {
 }
 
 .project-image {
-  height: 150px;
-  width: 300px;
+  height: 350px;
+  width: 350px;
 }
 
 .git-hub-links {
