--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -10,6 +10,50 @@
   
 }
 
+.construction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #904860;
+}
+
+.words {
+  color: #904860;
+  font-size: 0;
+  line-height: 1.5;
+}
+
+@keyframes move {
+  0% {
+    transform: translate(-30%, 0);
+  }
+
+  50% {
+    text-shadow: 0 25px 50px rgba(0, 0, 0, 0.75);
+  }
+}
+
+.words span:nth-child(2) {
+  animation-delay: 0.3s;
+}
+.words span:nth-child(3) {
+  animation-delay: 0.6s;
+}
+.words span:nth-child(4) {
+  animation-delay: 0.9s;
+}
+.words span:nth-child(5) {
+  animation-delay: 1.2s;
+}
+
+.words span {
+  font-size: 7rem;
+  display: inline-block;
+  animation: move 3s ease-in-out infinite;
+}
+
 
 .container {
   border: 1px solid black;
