--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -7,6 +7,8 @@
   margin: 0;
   padding: 0;
   font-size: 18px;
+  display: flex;
+  flex-direction: column;
   
 }
 
@@ -48,8 +50,13 @@ h1 {
   100% {opacity: 1;}
 }
 
+.project-container {
+  background: linear-gradient(0.25turn, #d0f0c0, #a9ba9d, #8f9779);
+  height: 100%;
+}
+
 .words {
-  color: #904860;
+  color: #d0f0c0;
   font-size: 0;
   line-height: 1.5;
 }
@@ -82,6 +89,33 @@ h1 {
   display: inline-block;
   animation: move 3s ease-in-out infinite;
 }
+
+
+
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 3rem;
+  }
+
+  .roles {
+    font-size: 4rem;
+  }
+}
+
+
+
+@media (max-width: 667px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  .roles {
+    font-size: 2rem;
+  }
+}
+
+
+
 
 
 
