--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -52,7 +52,7 @@ h1 {
 
 .project-container {
   background: linear-gradient(0.25turn, #d0f0c0, #a9ba9d, #8f9779);
-  height: 100%;
+  height: 100vh;
 }
 
 .words {
@@ -90,6 +90,21 @@ h1 {
   animation: move 3s ease-in-out infinite;
 }
 
+.first-project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff0d8;
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px 5px #f0d8d8;
+  width: 50%;
+  margin-left: 25%;
+}
+
+.skills-container {
+  background: linear-gradient(0.25turn, #d0f0c0, #a9ba9d, #8f9779);
+}
 
 
 @media (max-width: 1024px) {
