--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
 
 .App {
   text-align: center;
@@ -102,8 +102,62 @@ h1 {
   margin-left: 25%;
 }
 
+h4 {
+  font-family: 'Bad Script';
+  font-size: 2rem;
+}
+
+img {
+  height: 300px;
+  width: 300px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+img:hover {
+  transform: scale(1.2);
+}
+
 .skills-container {
   background: linear-gradient(0.25turn, #d0f0c0, #a9ba9d, #8f9779);
+}
+
+.icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.icon {
+  font-size: 6rem;
+}
+
+.icon:nth-of-type(1) {
+  color: #ff9912;
+}
+
+.icon:nth-of-type(2) {
+  color: #82eefd;
+}
+
+.icon:nth-of-type(3) {
+  color: #fef9f3;
+}
+
+.icon:nth-of-type(4) {
+  color: #0000ff;
+}
+
+.icon:nth-of-type(5) {
+  color: #ffff00;
+}
+
+.icon:nth-of-type(6) {
+  color: #008000;
+}
+
+.icon:nth-of-type(7) {
+  color: #d87093;
 }
 
 
